--- a/templates/mysql.html
+++ b/templates/mysql.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type = "text/javascript"  src = "{{ url_for('static', filename = 'hello.js') }}" ></script>
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='mysql.css') }}">
+		<!-- <script type = "text/javascript"  src = "{{ url_for('static', filename = 'hello.js') }}" ></script> -->
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='MySQL.css') }}">
         <title>MySQL</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,37 +11,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <style>
-         /* body {
-             background-color: #f8f3f3 ;
-         }
-         header, footer {
-             background-color:lightblue;
-             text-align: center;
-             padding:30px;
-             color:black;
-             width:100%;
-             height:20px;
-             font-family: Verdana, Geneva, Tahoma, sans-serif;
-             font-weight: bolder;
-             font-size: larger;
-
-         }
-
-         #head {
-            text-align: center;
-            background-color: lightblue;
-            font-family: sans-serif;
-            font-weight: bolder;
-            font-size: larger;
-            padding:10px;
-         } */
-
-     </style>
 	</head>
 	<body>
 		<header>
-         This is Header
+         || <a href="/PostgreSQL"><b>Visit PostgreSQL</b></a> ||
+         <br/>
+         || <a href="/MySQL"><b>Visit MySQL</b></a> ||
      </header>
      <br/>
       <div class="container">
